resolved overflow issue on root #1

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -23,6 +23,6 @@ code {
     monospace;
 }
 
-#root {
+/*#root {
   height: 100%;
-}
+}*/
